Fixed jumping parallax background

--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    background-position-y: 0px;
     height: 100vh;
     color: white;
 }
